Fix theming toggler flickering
The css being applied on `:hover` only, resulted in flickering when the
toggler transitioned to `:active` state (on click).
This caused the toggler to return from its intermediate indication style to
its initial style before transitioning to the new and intended styling,
eg:
`light -> indication -> light -> dark`
instead of:
`light -> indication -> dark`

By adding `:active` to the selector for the indication effect, clicking
the toggler no longer causes a style change, so the transition happens
from intermediate straight to final state.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -130,15 +130,16 @@ h6 {
   box-shadow: inset -0.4rem -0.25rem 0 hsl(55, 80%, 90%);
 }
 
-#theme-toggle:not(:focus):hover {
+#theme-toggle:not(:focus):hover,
+#theme-toggle:active {
   background: hsl(210, 100%, 30%);
 }
 
-#theme-toggle:not(:focus):hover::after {
+#theme-toggle:not(:focus):hover::after,
+#theme-toggle:active::after {
   left: 1rem;
   background: unset;
   box-shadow: inset -0.6rem -0.125rem 0 hsl(55, 80%, 70%);
-  transition-timing-function: ease-out;
 }
 
 body {
