--- a/src/styles/theming.scss
+++ b/src/styles/theming.scss
@@ -81,13 +81,13 @@
     }
   }
 
-  &:not(:focus):hover {
+  &:not(:focus):hover,
+  &:active {
     background: hsl(210, 100%, 30%);
     &::after {
       left: 1rem;
       background: unset;
       box-shadow: inset -0.6rem -0.125rem 0 hsl(55, 80%, 70%);
-      transition-timing-function: ease-out;
     }
   }
 }
